--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="question-container">
+        
+    </div>    
     <script src="./src/index.js"></script>
 </body>
 </html>
